fix: 🐛 Extrainfo overflow from media page

--- a/src/index.css
+++ b/src/index.css
@@ -715,6 +715,9 @@
       }
     }
   }
+  .pg-media-info-extra-info  {
+    word-break: break-word;
+  }
 
 
   .user-profile-media-list-container {
